refactored ReactiveMusic logic for readability and performance optimization